--- a/JobSeekingSystem/src/JobSeekerJobGUI.form
+++ b/JobSeekingSystem/src/JobSeekerJobGUI.form
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JobGUI">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="5" left="50" bottom="0" right="50"/>
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JobSeekerJobGUI">
+  <grid id="27dc6" binding="jobPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="50" left="200" bottom="200" right="200"/>
     <constraints>
-      <xy x="20" y="20" width="949" height="617"/>
+      <xy x="20" y="20" width="949" height="833"/>
     </constraints>
     <properties>
+      <background color="-1118482"/>
       <enabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="f603a" binding="jobPanel" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="10" left="50" bottom="0" right="50"/>
+      <grid id="f603a" binding="jobContainer" layout-manager="GridLayoutManager" row-count="14" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="1" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="500" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3ff40" class="javax.swing.JLabel" binding="jobTitle">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="211" height="25"/>
               </grid>
             </constraints>
@@ -33,7 +36,7 @@
           </component>
           <component id="e2e2e" class="javax.swing.JLabel" binding="jobEmployer">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="10"/>
               </grid>
             </constraints>
@@ -44,7 +47,7 @@
           </component>
           <component id="8a607" class="javax.swing.JLabel" binding="jobLocation">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="5"/>
               </grid>
             </constraints>
@@ -54,7 +57,7 @@
           </component>
           <component id="cfcb7" class="javax.swing.JLabel" binding="jobSalary">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="163" height="5"/>
               </grid>
             </constraints>
@@ -64,7 +67,7 @@
           </component>
           <component id="12950" class="javax.swing.JLabel" binding="jobType">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="163" height="5"/>
               </grid>
             </constraints>
@@ -74,7 +77,7 @@
           </component>
           <component id="c4c07" class="javax.swing.JLabel" binding="jobDescription">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="20"/>
                 <preferred-size width="-1" height="20"/>
                 <maximum-size width="-1" height="20"/>
@@ -87,7 +90,7 @@
           </component>
           <component id="66c69" class="javax.swing.JLabel">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Want to apply? Write a cover letter below."/>
@@ -95,7 +98,7 @@
           </component>
           <vspacer id="54c5c">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="332" height="15"/>
                 <maximum-size width="-1" height="15"/>
@@ -104,7 +107,7 @@
           </vspacer>
           <vspacer id="4c1e9">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="332" height="15"/>
                 <maximum-size width="-1" height="15"/>
@@ -113,7 +116,7 @@
           </vspacer>
           <vspacer id="b18c7">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="332" height="15"/>
                 <maximum-size width="-1" height="15"/>
@@ -122,27 +125,43 @@
           </vspacer>
           <component id="e5538" class="javax.swing.JButton" default-binding="true">
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="40"/>
                 <preferred-size width="163" height="30"/>
-                <maximum-size width="150" height="-1"/>
+                <maximum-size width="300" height="-1"/>
               </grid>
             </constraints>
             <properties>
+              <background color="-16745473"/>
+              <font size="16" style="1"/>
+              <foreground color="-1"/>
               <text value="Submit Application"/>
             </properties>
           </component>
           <component id="c85ec" class="javax.swing.JTextArea" binding="coverLetter">
             <constraints>
-              <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="100"/>
                 <preferred-size width="-1" height="100"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1118482"/>
+            </properties>
           </component>
+          <hspacer id="dd924">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="10"/>
+                <maximum-size width="500" height="-1"/>
+              </grid>
+            </constraints>
+          </hspacer>
           <vspacer id="dd409">
             <constraints>
-              <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="10"/>
+              </grid>
             </constraints>
           </vspacer>
         </children>
