--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -14,7 +14,7 @@
       <grid id="ae545" binding="jobsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="100" bottom="100" right="100"/>
         <constraints>
-          <tabbedpane title="Your Jobs"/>
+          <tabbedpane title="Jobs"/>
         </constraints>
         <properties>
           <background color="-1118482"/>
@@ -31,7 +31,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <scrollpane id="bc2f2">
+              <scrollpane id="bc2f2" binding="recruiterJobsTable">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -65,7 +65,7 @@
                   <text value="Below are the jobs you have created:"/>
                 </properties>
               </component>
-              <component id="e7d0b" class="javax.swing.JButton">
+              <component id="e7d0b" class="javax.swing.JButton" binding="createJobButton">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="30"/>
@@ -102,7 +102,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="3db03" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3db03" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="13" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="50" left="50" bottom="50" right="50"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
@@ -261,82 +261,40 @@
                   </grid>
                 </constraints>
               </hspacer>
-            </children>
-          </grid>
-        </children>
-      </grid>
-      <grid id="4984c" binding="applicationsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="50" left="100" bottom="100" right="100"/>
-        <constraints>
-          <tabbedpane title="Applications"/>
-        </constraints>
-        <properties>
-          <background color="-1118482"/>
-        </properties>
-        <border type="none"/>
-        <children>
-          <grid id="73e6a" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="50" left="50" bottom="50" right="50"/>
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="600" height="-1"/>
-                <preferred-size width="600" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-1"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <vspacer id="820a8">
+              <component id="702be" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <scrollpane id="664ac">
-                <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="800" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <background color="-1"/>
-                </properties>
-                <border type="none"/>
-                <children>
-                  <component id="1171c" class="javax.swing.JTable" binding="applicationsTable">
-                    <constraints/>
-                    <properties/>
-                  </component>
-                </children>
-              </scrollpane>
-              <component id="8f04d" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="50"/>
+                  <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="67" height="50"/>
                   </grid>
                 </constraints>
                 <properties>
                   <font size="20"/>
-                  <text value="Applications"/>
+                  <text value="Results"/>
                 </properties>
               </component>
-              <component id="8da27" class="javax.swing.JLabel">
+              <hspacer id="e7377">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Below is a list of your current applications"/>
-                </properties>
-              </component>
-              <hspacer id="62b15">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="10"/>
                     <maximum-size width="500" height="-1"/>
                   </grid>
                 </constraints>
               </hspacer>
+              <scrollpane id="29d">
+                <constraints>
+                  <grid row="12" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="a4c9c" class="javax.swing.JTable" binding="searchResults">
+                    <constraints/>
+                    <properties>
+                      <background color="-1"/>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
             </children>
           </grid>
         </children>
@@ -369,7 +327,7 @@
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <scrollpane id="9764a">
+              <scrollpane id="9764a" binding="recruiterInboxTable">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="800" height="-1"/>
