--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="27" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="100" bottom="20" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="604" height="1211"/>
+      <xy x="20" y="20" width="614" height="1211"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -122,7 +122,9 @@
       </component>
       <component id="bf684" class="javax.swing.JComboBox" binding="salaryMenu">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="50" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <model>
@@ -153,7 +155,7 @@
       </component>
       <component id="437ba" class="javax.swing.JList" binding="skillsList">
         <constraints>
-          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
@@ -188,7 +190,7 @@
       </component>
       <component id="109c" class="javax.swing.JComboBox" binding="locationStateMenu">
         <constraints>
-          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -347,7 +349,9 @@
       </scrollpane>
       <component id="2b440" class="javax.swing.JComboBox" binding="postcodeMenu">
         <constraints>
-          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties/>
       </component>
