--- a/JobSeekingSystem/src/AdminGUI.form
+++ b/JobSeekingSystem/src/AdminGUI.form
@@ -125,6 +125,14 @@
               <text value="Users"/>
             </properties>
           </component>
+          <component id="c0f80" class="javax.swing.JButton" binding="newMessageButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="New Message"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
