--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JobSeekerHomeGUI">
   <tabbedpane id="e6adc" binding="navbar">
     <constraints>
-      <xy x="8" y="20" width="1372" height="1220"/>
+      <xy x="8" y="20" width="1372" height="1235"/>
     </constraints>
     <properties>
       <background color="-16745473"/>
@@ -284,48 +284,6 @@
                   </grid>
                 </constraints>
               </vspacer>
-              <grid id="f5d97" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="15" column="0" row-span="8" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-1"/>
-                </properties>
-                <border type="none"/>
-                <children>
-                  <component id="970af" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="67" height="50"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <font size="20"/>
-                      <text value="Results"/>
-                    </properties>
-                  </component>
-                  <component id="14e08" class="javax.swing.JTable" binding="jobSearchTable">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="400"/>
-                        <maximum-size width="-1" height="400"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <background color="-1"/>
-                    </properties>
-                  </component>
-                  <hspacer id="ddc0">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                        <minimum-size width="-1" height="10"/>
-                        <maximum-size width="500" height="-1"/>
-                      </grid>
-                    </constraints>
-                  </hspacer>
-                </children>
-              </grid>
               <component id="b57cd" class="javax.swing.JTextField" binding="textField1" default-binding="true">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -359,6 +317,42 @@
                   </grid>
                 </constraints>
               </hspacer>
+              <component id="970af" class="javax.swing.JLabel" binding="resultsHeading">
+                <constraints>
+                  <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="67" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <hspacer id="ddc0">
+                <constraints>
+                  <grid row="15" column="0" row-span="1" col-span="7" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="10"/>
+                    <maximum-size width="500" height="-1"/>
+                  </grid>
+                </constraints>
+              </hspacer>
+              <scrollpane id="2897d" binding="searchResultsScroll">
+                <constraints>
+                  <grid row="17" column="0" row-span="6" col-span="7" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="14e08" class="javax.swing.JTable" binding="jobSearchTable">
+                    <constraints/>
+                    <properties>
+                      <autoCreateRowSorter value="true"/>
+                      <background color="-1"/>
+                      <fillsViewportHeight value="false"/>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
             </children>
           </grid>
         </children>
